# sigil

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
.sigil/checkpoints/: en-001.json  en-002.json  fa-001.json  fk-006.json  fm-027.json  fm-028.json  fm-029.json  fm-030.json  fm-031.json  fm-032.json  fm-033.json  fm-034.json  fm-035.json  fm-036.json  fv-040.json  fv-041.json  fv-042.json  re-001.json  re-002.json  re-003.json  re-004.json  re-005.json  re-006.json  re-007.json  re-008.json  re-009.json  re-010.json  re-011.json  re-012.json  sg-001.json  sg-002.json  sg-003.json  sg-004.json  sg-005.json  sg-006.json  sg-007.json  sg-008.json  sg-009.json  sg-010.json  sg-011.json  (+37 more)
.sigil/persist/sigil:sigil:1/: entity_memory.md
.sigil/sessions/: re-002.json  re-003.json  re-004.json  re-005.json  re-006.json  sg-034.json  sg-035.json  sg-036.json  sg-037.json  sg-038.json  sg-039.json  sg-040.json  sg-041.json  sg-042.json  sg-043.json  sg-044.json  sg-045.json  sg-046.json  sg-047.json
aeqi-cli/src/: cli.rs  helpers.rs  identity.rs  main.rs
aeqi-cli/src/cmd/: agent.rs  audit.rs  daemon.rs  doctor.rs  mcp.rs  mod.rs  operation.rs  run.rs  setup.rs  skill.rs
aeqi-cli/src/tui/: mod.rs  state.rs
agents/: README.md
agents/ceo/: agent.toml
agents/cfo/: agent.toml
agents/cfo/.sigil/: emotional_state.json  lifecycle-state.json
agents/ciso/: agent.md  agent.toml
agents/coo/: agent.toml
agents/cpo/: agent.toml
agents/cto/: agent.toml
agents/designer/: agent.toml
agents/engineer/: agent.toml
agents/gc/: agent.toml
agents/rei/: agent.toml
agents/researcher/: agent.toml
agents/reviewer/: agent.toml
agents/shadow/: agent.toml
agents/shared/: WORKFLOW.md
agents/trader/: agent.toml
agents/void/: KNOWLEDGE.md  MEMORY.md
apps/landing/: index.html  package-lock.json  package.json
apps/shared/: pricing.ts
apps/ui/: CLAUDE.md  README.md  package.json
config/: aeqi.toml  realm.toml  sigil.example.toml  sigil.toml
crates/aeqi-web/: Cargo.toml
crates/realm-companions/: Cargo.toml
crates/realm-core/: Cargo.toml
crates/realm-gates/: Cargo.toml
crates/realm-memory/: Cargo.toml
crates/realm-orchestrator/: Cargo.toml
crates/realm-orchestrator/src/: bond.rs  chamber.rs  checkpoint.rs  context_budget.rs  cost_ledger.rs  domain.rs  executor.rs  familiar_router.rs  fate.rs  formula.rs  gap_analysis.rs  lib.rs  metrics.rs  pulse.rs  raid.rs  reflection.rs  registry.rs  ritual.rs  scout.rs  session_tracker.rs  spirit.rs  summoner.rs  tools.rs  whisper.rs
crates/realm-providers/: Cargo.toml
crates/realm-quests/: Cargo.toml
crates/realm-tools/: Cargo.toml
crates/sigil-core/: Cargo.toml
crates/sigil-gates/: Cargo.toml
crates/sigil-memory/: Cargo.toml
crates/sigil-orchestrator/: Cargo.toml
crates/sigil-providers/: Cargo.toml
crates/sigil-tasks/: Cargo.toml
crates/sigil-tasks/src/: dependency_inference.rs  lib.rs  mission.rs  query.rs  store.rs  task.rs
crates/sigil-tools/: Cargo.toml
crates/sigil-tools/src/: continue_agent.rs  craft_next.rs  delegate.rs  edit.rs  execute_plan.rs  file.rs  git.rs  glob.rs  grep.rs  lib.rs  porkbun.rs  shell.rs  skill.rs  tasks.rs  web_fetch.rs  web_search.rs
crates/sigil-web/: Cargo.toml
docs/: ARCHITECTURE-V4.md  MASTER-SYNTHESIS.md  README.md  SIGIL.md  agent-loop-parity.md  architecture.md  claude-code-integration.md  council.md  deployment.md  domains.md  molecules.md  native-runtime.md  orchestration-redesign.md  project-setup.md  quickstart.md  roadmap.md  sigil-vs-hermes-supermemory-deerflow-2026-03-25.md  state-and-direction-2026-03-25.md  synthesis-v4-final.md  ui-design.md  vision.md
docs/archive/: ARCHITECTURE-V4.md  README.md  SIGIL.md  architecture.md  claude-code-integration.md  formulas.md
projects/: README.md
projects/gacha-agency/: AGENTS.md
rigs/familiar/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  KNOWLEDGE.md  PREFERENCES.md  SOUL.md
rigs/familiar-kael/: AGENTS.md  IDENTITY.md  SOUL.md
rigs/familiar-mira/: AGENTS.md  IDENTITY.md  SOUL.md
rigs/familiar-void/: AGENTS.md  IDENTITY.md  KNOWLEDGE.md  SOUL.md
rigs/shared/: WORKFLOW.md
rm/: Cargo.toml
rm/src/: main.rs
scripts/: check-recall.sh  deploy.sh  mark-recall.sh  session-primer.sh
sg/src/: main.rs
sigil-cli/: Cargo.toml
sigil-cli/src/: cli.rs  helpers.rs  main.rs  service.rs
(+358 files in other folders)
