[workspace]
resolver = "2"
members = [
    "rm",
    "crates/realm-core",
    "crates/realm-quests",
    "crates/realm-providers",
    "crates/realm-tools",
    "crates/realm-orchestrator",
    "crates/realm-memory",
    "crates/realm-gates",
    "crates/realm-companions",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["AlgoStaking"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Crypto
chacha20poly1305 = "0.10"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Dirs
dirs = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Tokio stream
tokio-stream = "0.1"
futures = "0.3"

# Test
tempfile = "3"

# Internal crates
realm-quests = { path = "crates/realm-quests" }
realm-core = { path = "crates/realm-core" }
realm-providers = { path = "crates/realm-providers" }
realm-tools = { path = "crates/realm-tools" }
realm-orchestrator = { path = "crates/realm-orchestrator" }
realm-memory = { path = "crates/realm-memory" }
realm-gates = { path = "crates/realm-gates" }
realm-companions = { path = "crates/realm-companions" }

[profile.release]
lto = true
codegen-units = 1
strip = true
