[package]
name = "realm-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
realm-core = { workspace = true }
realm-quests = { workspace = true }
realm-providers = { workspace = true }
realm-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
