[package]
name = "sigil-tools"
version.workspace = true
edition.workspace = true
description = "Built-in tools for shell, file, git, task, and agent delegation"

[dependencies]
sigil-core = { workspace = true }
sigil-tasks = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
